added notes, progress and user controllers and routes
