# routes/index.js
@@ -1,5 +1,8 @@
 const routes = require("express").Router();
 const bookRouter = require("./books");
+const highlightsNotesRouter = require("./highlightsNotes");
+const readingProgressRouter = require("./readingProgress");
+const userRouter = require("./users");
 const swaggerRouter = require("./swagger");
 
 routes.get("/", (req, res) => {
@@ -9,5 +12,11 @@ routes.get("/", (req, res) => {
 routes.use("/api-docs", swaggerRouter);
 
 routes.use("/books", bookRouter);
+
+routes.use("/users", userRouter);
+
+routes.use("/highlightnotes", highlightsNotesRouter);
+
+routes.use("/readingprogress", readingProgressRouter);
 
 module.exports = routes;
