# routes/users.js
@@ -1,0 +1,11 @@
+const express = require("express");
+const router = express.Router();
+const userController = require("../controllers/users");
+
+router.get("/", userController.getAllUsers);
+router.get("/:id", userController.getUserById);
+router.post("/", userController.createUser);
+router.delete("/:id", userController.deleteUser);
+router.put("/:id", userController.updateUser);
+
+module.exports = router;
